feat. dns查询及界面翻译

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,21 @@ project(NetTest VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Quick Network WebSockets)
+find_package(Qt6 REQUIRED COMPONENTS Core Quick QuickControls2 LinguistTools Network WebSockets)
 
-qt_standard_project_setup(REQUIRES 6.5)
+qt_standard_project_setup(
+    REQUIRES 6.5
+    I18N_TRANSLATED_LANGUAGES zh_CN
+)
+
+qt_add_translations(${PROJECT_NAME}
+    RESOURCE_PREFIX "/"
+    TS_FILE_DIR translations
+)
 
 qt_add_executable(${PROJECT_NAME}
     src/main.cpp
+    src/Global.h src/Global.cpp
 )
 
 qt_add_qml_module(${PROJECT_NAME}
@@ -25,19 +34,22 @@ qt_add_qml_module(${PROJECT_NAME}
     SOURCES src/WebSocket/WebSocketClient.h src/WebSocket/WebSocketClient.cpp
     QML_FILES page/Main.qml page/TextAreaButton.qml
     QML_FILES page/ClientPage.qml page/ServerPage.qml
-    QML_FILES page/MainPage.qml
+    QML_FILES page/MainPage.qml page/DNSQueryPage.qml
+    RESOURCES android/AndroidManifest.xml android/build.gradle android/res/values/libs.xml android/res/xml/qtprovider_paths.xml android/gradle/wrapper/gradle-wrapper.jar android/gradle/wrapper/gradle-wrapper.properties android/gradle.properties android/gradlew android/gradlew.bat
+    SOURCES src/Settings.h src/Settings.cpp
+    SOURCES src/dns/DnsResponse.h src/dns/DnsResponse.cpp
 )
 
 qt_add_resources(${PROJECT_NAME} "qml"
     PREFIX "/"
-    FILES "page/icon/angle-left.svg"
+    FILES "page/icon/angle-left.svg" "page/icon/menu-burger.svg" "page/icon/menu-dots-vertical.svg"
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.${PROJECT_NAME}
+    MACOSX_BUNDLE_GUI_IDENTIFIER com.LFWQSP2641.${PROJECT_NAME}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
@@ -48,7 +60,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 )
 
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE Qt6::Core Qt6::Quick Qt6::Network Qt6::WebSockets
+    PRIVATE Qt6::Core Qt6::Quick Qt6::Network Qt6::WebSockets Qt6::QuickControls2
 )
 
 include(GNUInstallDirs)
