尝试支持其他平台

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,16 +5,31 @@ on: push
 env:
   BUILD_TYPE: Release
   QT_VERSION: '6.8.*'
-  VCPKG_ROOT: '${{ github.workspace }}/vcpkg'
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest
+            qt_host: windows
+            arch: win64_msvc2022_64
+            cmake_generator: 'Visual Studio 17 2022'
+          - os: ubuntu-latest
+            qt_host: linux
+            arch: linux_gcc_64
+            cmake_generator: 'Ninja'
+          - os: macos-latest
+            qt_host: mac
+            arch: clang_64
+            cmake_generator: 'Ninja'
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Get cmake
+    - name: Get CMake
       uses: lukka/get-cmake@latest
 
     - name: Install Qt
@@ -22,43 +37,52 @@ jobs:
       with:
         cache: 'true'
         version: ${{ env.QT_VERSION }}
-        host: 'windows'
+        host: ${{ matrix.qt_host }}
         target: 'desktop'
-        arch: 'win64_msvc2022_64'
-        tools: 'tools_ninja tools_cmake tools_vcredist,qt.tools.vcredist_msvc2022_x64'
+        arch: ${{ matrix.arch }}
         modules: 'qtwebsockets'
 
     - name: Configure CMake
-      run: cmake -B build -S . -G "Visual Studio 17 2022" -A x64 -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -B ${{github.workspace}}/build
+      run: |
+        cmake -B ${{github.workspace}}/build -S . -G "${{ matrix.cmake_generator }}" -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DEXECUTABLE_OUTPUT_PATH=${{github.workspace}}/build/bin
 
-    # 编译解决方案
     - name: Build
       run: |
-        cd ${{ github.workspace }}
-        cd build
-        cmake --build . --parallel --config Release
+        cmake --build ${{github.workspace}}/build --config Release --parallel
 
     - name: Package
+      if: matrix.os == 'windows-latest'
       run: |
-        cd ${{ github.workspace }}
+        tree ${{github.workspace}}
         mkdir -p release_package
-        cd release_package
-        copy ${{ github.workspace }}/build/Release/NetTest.exe .
-        windeployqt --qmldir ${{ github.workspace }} ./NetTest.exe
+        cp build/Release/NetTest.exe release_package/
+        windeployqt --qmldir . release_package/NetTest.exe
 
-    - name: Compress
+    - name: Compress (Windows Only)
+      if: matrix.os == 'windows-latest'
       run: |
-        cd ${{ github.workspace }}
         7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on NetTest.7z release_package
 
-    - name: Upload exe
+    - name: Upload executable (Windows Only)
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
         name: NetTest.exe
-        path: ${{ github.workspace }}/build/Release/NetTest.exe
+        path: build/Release/NetTest.exe
+        compression-level: 0
 
-    - name: Upload package
+    - name: Upload package (Windows Only)
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
-        name: NetTest.7z
-        path: ${{ github.workspace }}/NetTest.7z
+        name: NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
+        path: NetTest.7z
+        compression-level: 0
+
+    - name: Upload build artifacts (Linux/macOS)
+      if: matrix.os != 'windows-latest'
+      uses: actions/upload-artifact@v4
+      with:
+        name: NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}
+        path: build/bin
+        compression-level: 0
