--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ env:
   BUILD_TYPE: Release
   QT_VERSION: '6.8.*'
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -53,15 +56,16 @@ jobs:
     - name: Package (Windows Only)
       if: matrix.os == 'windows-latest'
       run: |
-        tree ${{github.workspace}}
         mkdir -p release_package
         cp build/Release/NetTest.exe release_package/
         windeployqt --qmldir . release_package/NetTest.exe
+      shell: bash
 
     - name: Compress (Windows Only)
       if: matrix.os == 'windows-latest'
       run: |
         7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z release_package
+      shell: bash
 
     - name: Upload executable (Windows Only)
       if: matrix.os == 'windows-latest'
@@ -72,6 +76,7 @@ jobs:
         compression-level: 0
 
     - name: Upload build artifacts (Windows)
+      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
         name: NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
@@ -83,8 +88,8 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
-          NetTest.exe
+          ${{github.workspace}}/NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
+          ${{github.workspace}}/build/Release/NetTest.exe
         generate_release_notes: true
 
     - name: Compress (Linux/macOS)
@@ -105,5 +110,5 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
+          ${{github.workspace}}/NetTest_${{ matrix.qt_host }}_${{ matrix.arch }}.7z
         generate_release_notes: true
